# post-project

./: .gitignore  README.md
backend/: README.md  fdm.md  mdm.md
backend/api-document/: README.md  admin.md  common-error.md  identity.md  post.md  user.md  validation.md
backend/createadmin/: Cargo.toml  README.md
backend/createadmin/src/: main.rs
backend/integration-test/: README.md  package.json  pnpm-lock.yaml  tmp.txt  tsconfig.json
backend/integration-test/src/: app.ts  common.ts  test_admin.ts  test_identity.ts  test_post.ts  test_user.ts
backend/services/: README.md  setup.sql
backend/services/post-kt-vertx-fdm/: README.adoc  build.gradle.kts  settings.gradle.kts
backend/services/post-ktor-mongo/: README.md  (+2 more)
backend/services/post-rust-actix-web/: Cargo.toml  README.md
backend/services/post-rust-actix-web/db/: setup.sql
backend/services/post-rust-actix-web/src/: main.rs
backend/services/post-rust-actix-web/src/common/tests/: mod.rs
backend/services/post-rust-actix-web/src/common/utils/: auth.rs  macros.rs
backend/services/post-rust-actix-web/src/create_post/: api.rs  deps.rs  mod.rs
backend/services/post-rust-actix-web/src/delete_post/: api.rs  deps.rs
backend/services/post-rust-actix-web/src/edit_post/: mod.rs
backend/services/post-rust-actix-web/src/get_identity/: deps.rs
backend/services/post-rust-actix-web/src/get_post/: deps.rs
backend/services/post-rust-actix-web/src/get_user/: api.rs  deps.rs  mod.rs
backend/services/post-rust-actix-web/src/list_posts/: mod.rs
backend/services/post-rust-actix-web/src/user_login/: mod.rs
(+357 files in other folders)
