[package]
name = "post-createadmin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
bcrypt = "0.13"
mysql = "23.0"
getrandom = "0.2"
base64 = "0.20"

[dependencies.mongodb]
version = "2.3"
default-features = false
features = ["sync"]
