[package]
name = "post-rust-actix-web"
version = "0.1.0"
authors = ["Jason5Lee <jason5lee@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2"
actix-rt = "2.6"

futures-util = "0.3"
once_cell = "1.8"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
jsonwebtoken = "8.1"
url = "2.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["mysql", "runtime-actix-rustls"] }
base64 = "0.20"
rand = "0.8"
bcrypt = "0.13"
humantime = "2.1"
envy = "0.4"
apply = "0.3"

[dependencies.uuid]
version = "1.2"
features = [
    "v4",
    "fast-rng",
]
